traversal.snake.Snake.scala.error
Compilation error:
Snake:40: error: not found: value seprent
    seprent()
    ^